After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711278 - Crash with Move to new tab group
Crash with Move to new tab group
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
git master
Other Linux
: Normal critical
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-01 21:54 UTC by Sébastien Wilmet
Modified: 2013-11-02 12:15 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sébastien Wilmet 2013-11-01 21:54:28 UTC
With two tabs: a file blah and a new document. Right click on blah's tab, and move to new tab group.

  • #0 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 56
  • #1 __GI_abort
    at abort.c line 90
  • #2 _g_log_abort
    at gmessages.c line 255
  • #3 g_assertion_message
  • #4 g_assertion_message_expr
  • #5 get_iter_from_tab
    at gedit-documents-panel.c line 215
  • #6 multi_notebook_tab_switched
    at gedit-documents-panel.c line 310
  • #7 gedit_marshal_VOID__OBJECT_OBJECT_OBJECT_OBJECT
    at gedit-marshal.c line 314
  • #8 g_closure_invoke
    at gclosure.c line 777
  • #9 signal_emit_unlocked_R
    at gsignal.c line 3586
  • #10 g_signal_emit_valist
    at gsignal.c line 3330
  • #11 g_signal_emit
    at gsignal.c line 3386
  • #12 notebook_switch_page
    at gedit-multi-notebook.c line 341
  • #13 _gtk_marshal_VOID__OBJECT_UINT
    at gtkmarshalers.c line 6000
  • #14 g_closure_invoke
    at gclosure.c line 777
  • #15 signal_emit_unlocked_R
    at gsignal.c line 3586
  • #16 g_signal_emit_valist
    at gsignal.c line 3330
  • #17 g_signal_emit
    at gsignal.c line 3386
  • #18 gtk_notebook_switch_page
    at gtknotebook.c line 6714
  • #19 gtk_notebook_real_remove
    at gtknotebook.c line 4980
  • #20 gtk_notebook_remove
    at gtknotebook.c line 4147
  • #21 gedit_notebook_remove
    at gedit-notebook.c line 472
  • #22 g_cclosure_marshal_VOID__OBJECTv
    at gmarshal.c line 1312
  • #23 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #24 _g_closure_invoke_va
    at gclosure.c line 840
  • #25 g_signal_emit_valist
    at gsignal.c line 3238
  • #26 g_signal_emit
    at gsignal.c line 3386
  • #27 gtk_container_remove
    at gtkcontainer.c line 1578
  • #28 gedit_notebook_move_tab
    at gedit-notebook.c line 659
  • #29 gedit_multi_notebook_add_new_notebook_with_tab
    at gedit-multi-notebook.c line 865
  • #30 _gedit_window_move_tab_to_new_tab_group
    at gedit-window.c line 4326
  • #31 on_move_to_new_tab_group_menuitem_activate
    at gedit-notebook-popup-menu.c line 135
  • #32 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #33 g_closure_invoke
    at gclosure.c line 777
  • #34 signal_emit_unlocked_R
    at gsignal.c line 3586
  • #35 g_signal_emit_valist
    at gsignal.c line 3330
  • #36 g_signal_emit
    at gsignal.c line 3386
  • #37 gtk_widget_activate
    at gtkwidget.c line 7183
  • #38 gtk_menu_shell_activate_item
    at gtkmenushell.c line 1383
  • #39 gtk_menu_shell_button_release
    at gtkmenushell.c line 805
  • #40 gtk_menu_button_release
    at gtkmenu.c line 3427
  • #41 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #42 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #43 _g_closure_invoke_va
    at gclosure.c line 840
  • #44 g_signal_emit_valist
    at gsignal.c line 3238
  • #45 g_signal_emit
    at gsignal.c line 3386
  • #46 gtk_widget_event_internal
    at gtkwidget.c line 7152
  • #47 gtk_widget_event
    at gtkwidget.c line 6814
  • #48 propagate_event_up
    at gtkmain.c line 2391
  • #49 propagate_event
    at gtkmain.c line 2499
  • #50 gtk_propagate_event
    at gtkmain.c line 2534
  • #51 gtk_main_do_event
    at gtkmain.c line 1714
  • #52 _gdk_event_emit
    at gdkevents.c line 69
  • #53 gdk_event_source_dispatch
    at gdkeventsource.c line 364
  • #54 g_main_dispatch
    at gmain.c line 3060
  • #55 g_main_context_dispatch
    at gmain.c line 3634
  • #56 g_main_context_iterate
    at gmain.c line 3705
  • #57 g_main_context_iteration
    at gmain.c line 3766
  • #58 g_application_run
    at gapplication.c line 1635
  • #59 main
    at gedit.c line 68

Comment 1 Ignacio Casal Quinteiro (nacho) 2013-11-02 12:15:13 UTC
This crash should be fixed now. There is still one assertion but oh! well :)