Fix crash on Move to Tab Group.

https://bugzilla.gnome.org/show_bug.cgi?id=711278